railway config update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=backend_advance
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo_backend
+spring.datasource.url=jdbc:postgresql://switchyard.proxy.rlwy.net:59467/railway
 spring.datasource.username=postgres
-spring.datasource.password=Purple3664
+spring.datasource.password=qqbQxiCMxkmPYarrSUTtfLbUuihRoOJn
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+server.port=${PORT:8080}
 
 # Circuit Breaker para un servicio llamado "myService"
 resilience4j.circuitbreaker.instances.loginService.register-health-indicator=true
