--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,12 +32,12 @@ services:
     image: docker.elastic.co/kibana/kibana:8.11.1
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - ELASTICSEARCH_USERNAME=elastic
-      - ELASTICSEARCH_PASSWORD=password1234
     ports:
       - "5601:5601"
     networks:
       - backend
+    depends_on:
+      - elasticsearch
 
   filebeat:
     image: docker.elastic.co/beats/filebeat:8.11.1
