--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,26 @@ management.endpoints.web.exposure.include=*
 # Mostrar detalles en el endpoint /health
 # Ruta base opcional para actuator
 management.endpoints.web.base-path=/actuator
+
+#KAFKA
+# Dirección del broker de Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+
+# SERIALIZADORES para PRODUCER (cuando envías mensajes)
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# SERIALIZADORES para CONSUMER (cuando recibes mensajes)
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Grupo de consumidores (para balanceo de carga y persistencia de offset)
+spring.kafka.consumer.group-id=mi-grupo-consumidor
+
+# Auto commit de offset
+spring.kafka.consumer.enable-auto-commit=true
+
+# Reinicio desde el principio si no hay offset guardado
+spring.kafka.consumer.auto-offset-reset=earliest
+
+spring.profiles.active=dev
